[tool.poetry]
name = "picture-tool"
version = "0.1.0"
description = ""
authors = ["filebin <alex.mousse9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
inquirer = "^3.4.0"
gallery-dl = "^1.27.4"
pykakasi = "^2.3.0"
jsonpath-ng = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
